// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UsersController POST /users with empty arguments returns a 422 1`] = `
Object {
  "error": "Unprocessable Entity",
  "message": Array [
    "country_code must be a valid ISO31661 Alpha3 code",
    "email must be an email",
    "graffiti should not be empty",
    "\\"discord\\" or \\"telegram\\" required when registering",
    "\\"discord\\" or \\"telegram\\" required when registering",
    "recaptcha must be a string",
    "recaptcha should not be empty",
  ],
  "statusCode": 422,
}
`;

exports[`UsersController POST /users with missing arguments returns a 422 1`] = `
Object {
  "error": "Unprocessable Entity",
  "message": Array [
    "country_code must be a valid ISO31661 Alpha3 code",
    "email must be an email",
    "graffiti must be a string",
    "graffiti should not be empty",
    "\\"discord\\" or \\"telegram\\" required when registering",
    "\\"discord\\" or \\"telegram\\" required when registering",
    "recaptcha must be a string",
    "recaptcha should not be empty",
  ],
  "statusCode": 422,
}
`;

exports[`UsersController POST /users/:id/token with invalid user id returns a 404 1`] = `
Object {
  "message": "Not Found",
  "statusCode": 404,
}
`;

exports[`UsersController POST /users/:id/token without api token returns a 401 1`] = `
Object {
  "message": "Unauthorized",
  "statusCode": 401,
}
`;
